# hackprinceton-final

./: .dockerignore  .env.example  .gitignore  CodeGuideline.md  Dockerfile  README.md  WRITEUP.md  index.html  package.json  playwright.architect.config.ts  pnpm-lock.yaml
.enter/plans/: contract-management.md  scenario-redesign.md
.github/workflows/: ci.yml
e2e/: architect-sandbox.spec.ts
runtime/: README.md  pyproject.toml
runtime/reagent_runtime/: __init__.py  agents.py  api.py  engine.py  evals.py  models.py  provenance.py  store.py  workflows.py
runtime/reagent_runtime/assurance/: __init__.py  api.py  compiler.py  models.py  persistence.py  registry.py  responses.py  retrieval.py  service.py  wire.py
runtime/reagent_runtime/scenarios/: __init__.py  base.py  bloated_swarm.py  content_machine.py  due_diligence_engine.py  evals.py  gold_plater.py  mcp_migration.py  ops_center.py  registry.py  runner.py  safety_net.py
runtime/tests/: test_api.py  test_assurance.py  test_assurance_retrieval.py  test_evals.py  test_runtime.py  test_workflows.py
runtime/tests/scenarios/: test_bloated_swarm.py  test_content_machine.py  test_due_diligence_engine.py  test_gold_plater.py  test_mcp_migration.py  test_ops_center.py  test_registry.py  test_safety_net.py
scripts/: check-architect-e2e.mjs
src/: index.css  main.tsx  router.tsx
src/data/: answers.ts  models.ts  nodeTypes.ts
src/engine/: GradingEngine.test.ts  GradingEngine.ts  graphUtils.ts
src/lib/: assuranceApi.test.ts  assuranceApi.ts  assuranceBindingPatch.test.ts  async.ts  (+15 more)
supabase/: config.toml
(+54 files in other folders)
